@@ -1,3 +1,9 @@
+2011-10-31  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
+
+	* xmenu.c (cleanup_widget_value_tree): New function.
+	(xmenu_show, xdialog_show): Use it in record_unwind_protect instead of
+	calling free_menubar_widget_value_tree directly (Bug#9830).
+
 2011-09-19  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* keymap.c (Fsingle_key_description): Use make_specified_string
